index.html,shuoming.txt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <p>hello git world.<br>first:download mysysgit.</p>
 <p>second:use mysysgit.</p>
+<p>third:mysysgit and git.</p>
 </body>
 
 
